Closed
Bug 490657
Opened 17 years ago
Closed 16 years ago
Submit URLs to Socorro
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)
References
()
Details
(Whiteboard: [camino-2.0])
Attachments
(1 file)
|
21.40 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
We'll need to be able to submit crash URLs to Socorro.
I believe Firefox decided to use the last page loaded as the crashing URL, but I'd have to go find the bug again.
Note that URLs are not currently visible per-report, but they are aggregated into topcrash reports like the one in the URL field.
| Reporter | ||
Comment 1•17 years ago
|
||
(In reply to comment #0)
> I believe Firefox decided to use the last page loaded as the crashing URL, but
> I'd have to go find the bug again.
Bug 375083 comment 12
| Assignee | ||
Comment 2•17 years ago
|
||
It looks like the comment on
http://code.google.com/p/socorro/source/browse/trunk/socorro/processor/processor.py#585
is out of date (which is why I couldn't figure out how they were passing it before), and we just need to stuff it into a URL param. I think this can be done without more upstream changes after the last round of param support stuff in Breakpad; I'll take a look.
Assignee: nobody → stuart.morgan+bugzilla
| Assignee | ||
Comment 3•17 years ago
|
||
The code I was thinking of is in flight; we need http://breakpad.appspot.com/8002/show for this. Then we'll need to wire Camino up to push URLs in.
What's our position on explicit consent though? I'd really rather not add UI where users have to opt in or out of this field. Is (lack of identifiability of crash reports) + (choice to submit a report) + (the fact that only logged in users will be able to see them in anything other than aggregate) sufficient?
| Reporter | ||
Comment 4•17 years ago
|
||
I think that it's probably safe for the foreseeable future, yes. If login is ever implemented, we may need to reconsider.
(Given that we're going to need some sort of page for disclaimers and other stuff for safebrowsing, perhaps we should mention this, too? c.f. http://www.mozilla.com/en-US/legal/privacy/firefox-en.html)
| Assignee | ||
Comment 5•17 years ago
|
||
Looks like the change I mentioned in comment 3 is going in soon. Note to self: when we update to get it, the way we specify the build id in the plist will need to change slightly.
| Assignee | ||
Comment 6•17 years ago
|
||
I've rev'd us to 366, which means we now have the library support for this. I just need to finish the code that pushes the current URL into breakpad.
| Reporter | ||
Updated•16 years ago
|
Flags: camino2.0b4?
Flags: camino2.0?
| Assignee | ||
Comment 7•16 years ago
|
||
I believe that this should theoretically work, but I have no idea how to test that the Breakpad+Socorro part is working. Smokey, do you have any idea how we would find out (other than "ship it and see if we get top crash site info")? Is there someone with the magic power to look at, say:
http://crash-stats.mozilla.com/report/index/3a8ceb20-8677-4794-a26f-e7f5a2090907
and see if it has a URL?
I do know that we are at least calling the the BreakpadWrapper method at the right times:
- When the active tab changes
- When the active window changes
- When page loading starts
where "about:blank"/"" are filtered out. That seems like the same best-guess approach Firefox took.
Attachment #399158 -
Flags: superreview?(mikepinkerton)
| Assignee | ||
Comment 8•16 years ago
|
||
(In reply to comment #7)
> Smokey, do you have any idea how we would find out
Nevermind, thanks to the helpful folks in #breakpad I have an answer: it does indeed work :)
Comment 9•16 years ago
|
||
Comment on attachment 399158 [details] [diff] [review]
fix
+@interface BreakpadWrapper : NSObject {
+ void* mBreakpadReference;
+}
class-level comment on what this class does and why it's here.
sr=pink
Attachment #399158 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 10•16 years ago
|
||
Landed on trunk and CAMINO_2_0_BRANCH with added comment.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•16 years ago
|
Flags: camino2.0b4?
Flags: camino2.0b4+
Flags: camino2.0?
Flags: camino2.0+
Whiteboard: [camino-2.0]
Target Milestone: --- → Camino2.0
You need to log in
before you can comment on or make changes to this bug.
Description
•