Camino only - Bug 490657: Add active URL to Breakpad reports. r/sr=pink